Added bootstrap, further fine-tuning of examples.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,5 @@
-</body>
+    </div>
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
