--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <title>{{ page.title }} - Extensions documentation</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
-  <link href='screen.css' rel='stylesheet' type='text/css'>
-</head>
-<body>
-<h1>{{ page.title }}</h1>
+  <head>
+    <title>{{ page.title }} - Extensions documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href='custom.css' rel='stylesheet' type='text/css'>
+  </head>
+  <body id="ext_{{ page.structureddocid }}">
+  	<div class="container">
+      <h1>{{ page.title }}</h1>
