bunch of layout fixes, added responsive bootstrap style reference

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,11 @@
-<!-- obviously needs further editing -->
-<p>sidebar navigation</p>
-<ul>
-  <li>link to article 1</li>
-  <li>link to article 2</li>
-  <li>etc.</li>
-</ul>
+        </div>
+        <div class="span4">
+          <p>sidebar navigation</p>
+          <ul>
+            <li>link to article 1</li>
+            <li>link to article 2</li>
+            <li>etc.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
