--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href='custom.css' rel='stylesheet' type='text/css'>
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link href='css/custom.css' rel='stylesheet' type='text/css'>
   </head>
   <body id="ext_{{ page.structureddocid }}">
-  	<div class="container">
-      <h1>{{ page.title }}</h1>
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span7 offset1">
+          <h1>{{ page.title }}</h1>
+ 
