--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{ page.title }} - Extensions documentation</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="css/bootstrap-responsive.css" rel="stylesheet">
-    <link href='css/custom.css' rel='stylesheet' type='text/css'>
-  </head>
-  <body id="ext_{{ page.structureddocid }}">
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span7 offset1">
-          <h1>{{ page.title }}</h1>
- 
+ <head>
+  <title>{{ page.title }} - Extensions documentation</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+  <link href='css/custom.css' rel='stylesheet' type='text/css'>
+  <link href="css/bootstrap-responsive.css" rel="stylesheet">
+ </head>
+ <body id="ext_{{ page.structureddocid }}">
+  <nav id="navbar" class="navbar navbar-inverse navbar-fixed-top">
+   <div class="navbar-inner">
+    <div class="container">
+     <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+     </button>
+     <a class="brand" href="#">Project name</a>
+     <div class="nav-collapse collapse">
+      <ul class="nav">
+       <li class="active"><a href="#">Home</a></li>
+       <li><a href="#about">About</a></li>
+       <li><a href="#contact">Contact</a></li>
+      </ul>
+     </div><!--/.nav-collapse -->
+    </div>
+   </div>
+  </nav>
+  <div class="container">
+   <div class="row">
+    <div class="span7">
+     <h1>{{ page.title }}</h1>
