--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,11 +1,13 @@
-        </div>
-        <div class="span4">
-          <p>sidebar navigation</p>
-          <ul>
-            <li>link to article 1</li>
-            <li>link to article 2</li>
-            <li>etc.</li>
-          </ul>
-        </div>
-      </div>
     </div>
+    <nav id="sidebar" class="span4 well">
+     <ul class="nav nav-list">
+      <li class="nav-header">Tutorials</li>
+      <li><a href="">link to article 1</a></li>
+      <li><a href="">link to article 2</a></li>
+      <li>etc.</li>
+      <li class="nav-header">API Docs</li>
+      <li><a href="">link to api doc 1</a></li>
+     </ul>
+    </nav>
+   </div>
+  </div>
