--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,14 @@
-    </div>
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-  </body>
+  </div>
+  <script src="http://code.jquery.com/jquery.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="http://code.jquery.com/jquery.js"></script>
+  <script>
+   $(function(){
+      var path = location.pathname.substring(1);
+      if ( path )
+        $('#sidebar a[href$="' + path + '"]').parent().attr('class', 'active');
+    });
+   // see http://docs.jquery.com/Tutorials:Auto-Selecting_Navigation
+  </script>
+ </body>
 </html>
