--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,17 @@
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href='css/custom.css' rel='stylesheet' type='text/css'>
   <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <script src="http://code.jquery.com/jquery.js"></script>
+
+  <script>
+ $(function(){
+   var path = location.pathname.substring(1);
+   if ( path )
+     $('#sidebar_content a[href$="' + path + '"]').attr('class', 'selected');
+ });
+  </script>
  </head>
- <body id="ext_{{ page.structureddocid }}">
+ <body>
   <nav id="navbar" class="navbar navbar-inverse navbar-fixed-top">
    <div class="navbar-inner">
     <div class="container">
