--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,11 +2,11 @@
     <nav id="sidebar" class="span4 well">
      <ul class="nav nav-list">
       <li class="nav-header">Tutorials</li>
-      <li><a href="">link to article 1</a></li>
-      <li><a href="">link to article 2</a></li>
+      <li><a href="article.html">link to article 1</a></li>
+      <li><a href="article-withsidebar.html">link to article 2</a></li>
       <li>etc.</li>
       <li class="nav-header">API Docs</li>
-      <li><a href="">link to api doc 1</a></li>
+      <li><a href="apidoc.html">link to api doc 1</a></li>
      </ul>
     </nav>
    </div>
