--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
       var path = location.pathname.substring(1);
       if ( path )
         $('#sidebar a[href$="' + path + '"]').parent().attr('class', 'active');
+        $('#navbar ul a[href$="' + path + '"]').parent().attr('class', 'active');
     });
    // see http://docs.jquery.com/Tutorials:Auto-Selecting_Navigation
   </script>
