--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,15 +7,6 @@
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href='css/custom.css' rel='stylesheet' type='text/css'>
   <link href="css/bootstrap-responsive.css" rel="stylesheet">
-    <script src="http://code.jquery.com/jquery.js"></script>
-
-  <script>
- $(function(){
-   var path = location.pathname.substring(1);
-   if ( path )
-     $('#sidebar_content a[href$="' + path + '"]').attr('class', 'selected');
- });
-  </script>
  </head>
  <body>
   <nav id="navbar" class="navbar navbar-inverse navbar-fixed-top">
@@ -26,12 +17,11 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
      </button>
-     <a class="brand" href="#">Project name</a>
+     <a class="brand" href="/">New Opera extensions documentation</a>
      <div class="nav-collapse collapse">
       <ul class="nav">
-       <li class="active"><a href="#">Home</a></li>
-       <li><a href="#about">About</a></li>
-       <li><a href="#contact">Contact</a></li>
+       <li><a href="about.html">About</a></li>
+       <li><a href="contact.html">Contact</a></li>
       </ul>
      </div><!--/.nav-collapse -->
     </div>
