fixed front page hero unit

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
     <nav id="sidebar" class="span4 well">
      <ul class="nav nav-list">
       <li class="nav-header">Tutorials</li>
-      <li><a href="article.html">link to article 1</a></li>
+      <li><a href="article.html">introduction</a></li>
       <li><a href="article-withsidebar.html">link to article 2</a></li>
       <li>etc.</li>
       <li class="nav-header">API Docs</li>
