--- a/css/custom.css
+++ b/css/custom.css
@@ -1,2 +1,3 @@
 body {padding-top: 40px;} /* added 40px padding as per view-source:http://twitter.github.com/bootstrap/components.html */
 #sidebar {margin-top: 60px;}
+.hero-unit {margin-top: 60px;}
