--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,6 @@
   </div>
-  <script src="http://code.jquery.com/jquery.js"></script>
+  <script src="js/jquery-1.9.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="http://code.jquery.com/jquery.js"></script>
   <script>
    $(function(){
       var path = location.pathname.substring(1);
