--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
      </button>
-     <a class="brand" href="/">New Opera extensions documentation</a>
+     <a class="brand" href="index.html">New Opera extensions documentation</a>
      <div class="nav-collapse collapse">
       <ul class="nav">
        <li><a href="about.html">About</a></li>
