fixed encoding and spans division

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,12 +1,12 @@
     </div>
-    <nav id="sidebar" class="span4 well">
+    <nav id="sidebar" class="span3 well">
      <ul class="nav nav-list">
       <li class="nav-header">Tutorials</li>
       <li><a href="article.html">introduction</a></li>
       <li><a href="article-withsidebar.html">link to article 2</a></li>
       <li>etc.</li>
       <li class="nav-header">API Docs</li>
-      <li><a href="apidoc.html">link to api doc 1</a></li>
+      <li><a href="apidoc.html">long long long long long long link to api doc 1</a></li>
      </ul>
     </nav>
    </div>
