--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,7 @@
 <html>
  <head>
   <title>{{ page.title }} - Extensions documentation</title>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -29,4 +30,4 @@
   </nav>
   <div class="container">
    <div class="row">
-    <div class="span7">
+    <div class="span8">
