added custom copyright notice feature

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,4 @@
-    </div>
+    </div><!-- .span8 -->
     <nav id="sidebar" class="span3 well">
      <ul class="nav nav-list">
       <li class="nav-header">Tutorials</li>
@@ -7,7 +7,7 @@
       <li>etc.</li>
       <li class="nav-header">API Docs</li>
       <li><a href="apidoc.html">long long long long long long link to api doc 1</a></li>
+      <li><a href="pageAction.html">pageAction</a></li>
      </ul>
     </nav>
-   </div>
-  </div>
+   </div><!-- .row-fluid -->
