added prettify.js support

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,7 @@
   </div><!-- .container-fluid -->
   <script src="js/jquery-1.9.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/prettify/run_prettify.js"></script>
   <script>
    $(function(){
       var path = location.pathname.slice(location.pathname.lastIndexOf('/')+1);
