--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,16 @@
-   <footer class="well">
+    <div id="push"></div><!-- this is for sticky footer: http://twitter.github.com/bootstrap/examples/sticky-footer-navbar.html -->
+   </div><!-- .container-fluid -->
+  </div><!-- #wrap -->
+  <footer id="footer">
     {% if page.copyright == 'opera-ccby' %}
-    <p>This article is licensed under a <a href="http://creativecommons.org/licenses/by/3.0/" rel="license">Creative Commons Attribution 3.0 License</a>.</p>
+   <p>This article is licensed under a <a href="http://creativecommons.org/licenses/by/3.0/" rel="license">Creative Commons Attribution 3.0 License</a>.</p>
    {% elsif page.copyright == 'opera-google-ccby' %}
-    <p>This article is licensed under a <a href="http://creativecommons.org/licenses/by/3.0/" rel="license">Creative Commons Attribution 3.0 License</a>.</p><p>Portions of this page are reproduced from work created and <a
+   <p>This article is licensed under a <a href="http://creativecommons.org/licenses/by/3.0/" rel="license">Creative Commons Attribution 3.0 License</a>.</p><p>Portions of this page are reproduced from work created and <a
   href="http://code.google.com/policies.html">shared by Google</a> and used according to terms described in the <a
   href="http://creativecommons.org/licenses/by/3.0/">Creative Commons
   3.0 Attribution License</a>.</p>
     {% endif %}
-   </footer>
-  </div><!-- .container-fluid -->
+  </footer>
   <script src="js/jquery-1.9.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/prettify/run_prettify.js"></script>
