--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,24 +10,26 @@
   <link href="css/bootstrap-responsive.css" rel="stylesheet">
  </head>
  <body>
-  <nav id="navbar" class="navbar navbar-inverse navbar-fixed-top">
-   <div class="navbar-inner">
-    <div class="container-fluid">
-     <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-     </button>
-     <a class="brand" href="index.html">New Opera extensions documentation</a>
-     <div class="nav-collapse collapse">
-      <ul class="nav">
-       <li><a href="about.html">About</a></li>
-       <li><a href="contact.html">Contact</a></li>
-      </ul>
-     </div><!--/.nav-collapse -->
+  <div id="wrap">
+   <nav id="navbar" class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+     <div class="container-fluid">
+      <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+       <span class="icon-bar"></span>
+       <span class="icon-bar"></span>
+       <span class="icon-bar"></span>
+      </button>
+      <a class="brand" href="index.html">New Opera extensions documentation</a>
+      <div class="nav-collapse collapse">
+       <ul class="nav">
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+       </ul>
+      </div><!--/.nav-collapse -->
+     </div>
     </div>
-   </div>
-  </nav>
-  <div class="container-fluid">
-   <div class="row-fluid">
-    <div class="span8">
+   </nav>
+   <div class="container-fluid">
+    <div class="row-fluid">
+     <div class="span8">
+     	
