--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <title>{{ page.title }} - Extensions documentation</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-  <link href='css/custom.css' rel='stylesheet' type='text/css'>
-  <link href="css/bootstrap-responsive.css" rel="stylesheet">
- </head>
- <body>
-  <div id="wrap">
-   <nav id="navbar" class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner">
-     <div class="container-fluid">
-      <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-       <span class="icon-bar"></span>
-       <span class="icon-bar"></span>
-       <span class="icon-bar"></span>
-      </button>
-      <a class="brand" href="index.html">New Opera extensions documentation</a>
-      <div class="nav-collapse collapse">
-       <ul class="nav">
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-       </ul>
-      </div><!--/.nav-collapse -->
-     </div>
-    </div>
-   </nav>
-   <div class="container-fluid">
-    <div class="row-fluid">
-     <div class="span8">
-     	
+	<head>
+		<title>{{ page.title }} - Extensions documentation</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+		<link href='css/custom.css' rel='stylesheet' type='text/css'>
+		<link href="css/bootstrap-responsive.css" rel="stylesheet">
+	</head>
+	<body>
+		<div id="wrap">
+			<nav id="navbar" class="navbar navbar-inverse navbar-fixed-top">
+				<div class="navbar-inner">
+					<div class="container-fluid">
+						<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="brand" href="index.html">New Opera extensions documentation</a>
+						<div class="nav-collapse collapse">
+							<ul class="nav">
+								<li><a href="about.html">About</a></li>
+								<li><a href="contact.html">Contact</a></li>
+							</ul>
+						</div><!-- /.nav-collapse -->
+					</div><!-- /.container-fluid -->
+				</div><!-- /.navbar-inner -->
+			</nav>
+			<div class="container-fluid">
+				<div class="row-fluid">
+					<div class="span8">
