Added API docs and skeleton .md docs for tutorials

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,12 +2,36 @@
 				<nav id="sidebar" class="span3 well">
 					<ul class="nav nav-list">
 						<li class="nav-header">Tutorials</li>
-						<li><a href="article.html">introduction</a></li>
-						<li><a href="article-withsidebar.html">link to article 2</a></li>
-						<li>etc.</li>
+						<li><a href="tut_getting_started.html">Getting Started</a></li>
+						<li><a href="tut_architecture_overview.html">Architecture Overiew</a></li>
+						<li><a href="tut_basics.html">The basics of making an extension</a></li>
+						<li><a href="tut_manifest.html">Manifest explanation</a></li>
+						<li><a href="tut_browser_actions.html">Browser Actions</a></li>
+						<li><a href="tut_message_passing.html">Message Passing</a></li>
+						<li><a href="tut_tab_window.html">Tab and Window Handling</a></li>
+						<li><a href="tut_context_menus.html">Context Menus</a></li>
+						<li><a href="tut_i18n.html">Internationalization</a></li>
+						<li><a href="tut_speeddial.html">Speed Dial extensions</a></li>
+						<li><a href="tut_testing.html">Testing and debugging your extensions</a></li>
+						<li><a href="tut_icons.html">Icons</a></li>
+						<li><a href="tut_oex2nex.html">OEX2CRX conversion</a></li>
+						<li><a href="tut_publishing_new_version.html">Publishing a new version</a></li>
+						<li><a href="tut_publishing_guidelines.html">Publishing guidelines</a></li>
 						<li class="nav-header">API Docs</li>
-						<li><a href="apidoc.html">long long long long long long link to api doc 1</a></li>
-						<li><a href="pageAction.html">pageAction</a></li>
+						<li><a href="alarms.html">chrome.alarms</a></li>
+						<li><a href="pageAction.html">chrome.pageAction</a></li>
+						<li><a href="browserAction.html">chrome.browserAction</a></li>
+						<li><a href="contextMenus.html">chrome.contextMenus</a></li>
+						<li><a href="declarativeWebRequest.html">chrome.declarativeWebRequest</a></li>
+						<li><a href="events.html">chrome.events</a></li>
+						<li><a href="extension.html">chrome.extension</a></li>
+						<li><a href="i18n.html">chrome.i18n</a></li>
+						<li><a href="idle.html">chrome.idle</a></li>
+						<li><a href="management.html">chrome.management</a></li>
+						<li><a href="permissions.html">chrome.permissions</a></li>
+						<li><a href="runtime.html">chrome.runtime</a></li>
+						<li><a href="storage.html">chrome.storage</a></li>
+						<li><a href="tabs.html">chrome.tabs</a></li>
 					</ul>
 				</nav>
 			</div><!-- .row-fluid -->
