fixed typo in sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,7 +3,7 @@
 					<ul class="nav nav-list">
 						<li class="nav-header">Tutorials</li>
 						<li><a href="tut_getting_started.html">Getting Started</a></li>
-						<li><a href="tut_architecture_overview.html">Architecture Overiew</a></li>
+						<li><a href="tut_architecture_overview.html">Architecture Overview</a></li>
 						<li><a href="tut_basics.html">The basics of making an extension</a></li>
 						<li><a href="tut_manifest.html">Manifest explanation</a></li>
 						<li><a href="tut_browser_actions.html">Browser Actions</a></li>
