couple of small corrections to links

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,6 +32,8 @@
 						<li><a href="runtime.html">chrome.runtime</a></li>
 						<li><a href="storage.html">chrome.storage</a></li>
 						<li><a href="tabs.html">chrome.tabs</a></li>
+						<li><a href="webRequest.html">chrome.webRequest</a></li>
+						<li><a href="windows.html">chrome.windows</a></li>
 					</ul>
 				</nav>
 			</div><!-- .row-fluid -->
