added manifest documentation

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,11 +1,11 @@
 				</div><!-- .span8 -->
-				<nav id="sidebar" class="span3 well">
+				<nav id="sidebar" class="span4 well">
 					<ul class="nav nav-list">
 						<li class="nav-header">Tutorials</li>
 						<li><a href="tut_getting_started.html">Getting Started</a></li>
 						<li><a href="tut_architecture_overview.html">Architecture Overview</a></li>
 						<li><a href="tut_basics.html">The basics of making an extension</a></li>
-						<li><a href="tut_manifest.html">Manifest explanation</a></li>
+						<li><a href="tut_manifest_explanation.html">Manifest explanation</a></li>
 						<li><a href="tut_browser_actions.html">Browser Actions</a></li>
 						<li><a href="tut_message_passing.html">Message Passing</a></li>
 						<li><a href="tut_tab_window.html">Tab and Window Handling</a></li>
@@ -18,6 +18,7 @@
 						<li><a href="tut_publishing_new_version.html">Publishing a new version</a></li>
 						<li><a href="tut_publishing_guidelines.html">Publishing guidelines</a></li>
 						<li class="nav-header">API Docs</li>
+						<li><a href="manifest.html">Formats: Manifest Files</a></li>
 						<li><a href="alarms.html">chrome.alarms</a></li>
 						<li><a href="pageAction.html">chrome.pageAction</a></li>
 						<li><a href="browserAction.html">chrome.browserAction</a></li>
