--- a/css/custom.css
+++ b/css/custom.css
@@ -19,7 +19,7 @@ footer {
 	box-sizing: border-box; 
 	padding: 10px;
 	border-top: 1px solid #ccc;
-
+	margin-top: 2em;
 }
 @media (max-width: 767px) {
 	footer {
