added multiple author support in _config.yml as per http://www.lostdecadegames.com/blog-author-attribution-using-jekyll/ also removed coauthor support, added free-form hat tip instead

--- a/_includes/h1.html
+++ b/_includes/h1.html
@@ -1,2 +1,11 @@
 					<h1>{{ page.title }}</h1>
-					{% if page.author %} <p>by {{ page.author }} {% endif %} {% if page.coauthor %} and {{ page.coauthor }} {% endif %} {% if page.author %} </p> {% endif %}
+					{% assign author = site.authors[page.author] %}
+					{% if page.author %} 
+						<p><img src="img/{{ author.icon }}" width="20"> by <a href="https://github.com/{{ author.github }}/">{{ author.display_name }}</a>
+					{% endif %}
+					{% if page.hattip %} 
+						({{ page.hattip }})
+					{% endif %}
+					{% if page.author %}
+						</p>
+					{% endif %}
