fixed a couple of minor issues, author names

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
 						<li><a href="tut_architecture_overview.html">Architecture Overview</a></li>
 						<li><a href="tut_basics.html">The basics of making an extension</a></li>
 						<li><a href="tut_manifest_explanation.html">Manifest explanation</a></li>
-						<li><a href="tut_browser_actions.html">Browser Actions</a></li>
+						<li><a href="tut_browser_actions.html">Display buttons, popups and badges</a></li>
 						<li><a href="tut_message_passing.html">Message Passing</a></li>
 						<li><a href="tut_tab_window.html">Tab and Window Handling</a></li>
 						<li><a href="tut_context_menus.html">Context Menus</a></li>
