--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
 						<li><a href="tut_browser_actions.html">Display buttons, popups and badges</a></li>
 						<li><a href="tut_message_passing.html">Message Passing</a></li>
 						<li><a href="tut_tab_window.html">Tab and Window Handling</a></li>
-						<li><a href="tut_context_menus.html">Context Menus</a></li>
+						<li><a href="tut_context_menus.html">Working with the context menu</a></li>
 						<li><a href="tut_internationalization.html">Internationalization</a></li>
 						<li><a href="tut_speeddial.html">Speed Dial extensions</a></li>
 						<li><a href="tut_testing.html">Testing and debugging your extensions</a></li>
