--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>{{ page.title }} - Extensions documentation</title>
 		<meta charset="utf-8">
+		<title>{{ page.title }} - New Opera extensions documentation</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
