fixed typo in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 		</div><!-- /#wrap -->
 		<footer id="footer">
 				{% if page.copyright == 'opera-ccby' %}
-			<p>This article is licensed under a	<a href="http://creativecommons.org/licenses/by/3.0/" rel="license">Creative Commons Attribution 3.0 UnportedM</a> license.</p>
+			<p>This article is licensed under a	<a href="http://creativecommons.org/licenses/by/3.0/" rel="license">Creative Commons Attribution 3.0 Unported</a> license.</p>
 			{% elsif page.copyright == 'opera-google-ccby' %}
 			<p>This article is licensed under a	<a href="http://creativecommons.org/licenses/by/3.0/" rel="license">Creative Commons Attribution 3.0 Unported</a> license.</p><p>Portions of this page are reproduced from work created and	<a
 		href="http://code.google.com/policies.html">shared by Google</a> and used according to terms described in the	<a
