--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
 						<li><a href="tut_basics.html">The basics of making an extension</a></li>
 						<li><a href="tut_manifest_explanation.html">Manifest explanation</a></li>
 						<li><a href="tut_browser_actions.html">Display buttons, popups and badges</a></li>
-						<li><a href="tut_message_passing.html">Message Passing</a></li>
+						<li><a href="tut_message_passing.html">Passing Messages in extensions</a></li>
 						<li><a href="tut_tab_window.html">Tab and Window Handling</a></li>
 						<li><a href="tut_context_menus.html">Working with the context menu</a></li>
 						<li><a href="tut_internationalization.html">Internationalization</a></li>
