title tweak to tabs and windows tutorial

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,7 @@
 						<li><a href="tut_manifest_explanation.html">Manifest explanation</a></li>
 						<li><a href="tut_browser_actions.html">Display buttons, popups and badges</a></li>
 						<li><a href="tut_message_passing.html">Passing Messages in extensions</a></li>
-						<li><a href="tut_tab_window.html">Tab and Window Handling</a></li>
+						<li><a href="tut_tab_window.html">Working with Tabs and Windows</a></li>
 						<li><a href="tut_context_menus.html">Working with the context menu</a></li>
 						<li><a href="tut_internationalization.html">Internationalization</a></li>
 						<li><a href="tut_speeddial.html">Speed Dial extensions</a></li>
