added well around author, tweaked sidebar well

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 				</div><!-- .span8 -->
-				<nav id="sidebar" class="span4 well">
+				<nav id="sidebar" class="span4 well well-small">
 					<ul class="nav nav-list">
-						<li class="nav-header">Tutorials</li>
+						<h2 class="nav-header">Tutorials</h2>
 						<li><a href="tut_getting_started.html">Getting Started</a></li>
 						<li><a href="tut_architecture_overview.html">Architecture Overview</a></li>
 						<li><a href="tut_basics.html">The basics of making an extension</a></li>
@@ -17,7 +17,7 @@
 						<li><a href="tut_oex2nex.html">OEX2CRX conversion</a></li>
 						<li><a href="tut_publishing_new_version.html">Publishing a new version</a></li>
 						<li><a href="tut_publishing_guidelines.html">Publishing guidelines</a></li>
-						<li class="nav-header">API Docs</li>
+						<h2 class="nav-header">API Docs</h2>
 						<li><a href="manifest.html">Formats: Manifest Files</a></li>
 						<li><a href="alarms.html">chrome.alarms</a></li>
 						<li><a href="pageAction.html">chrome.pageAction</a></li>
