changed top navigation so as to include Dev.Opera nav

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,8 +22,8 @@
 						<a class="brand" href="index.html">New Opera extensions documentation</a>
 						<div class="nav-collapse collapse">
 							<ul class="nav">
-								<li><a href="about.html">About</a></li>
 								<li><a href="contact.html">Contact</a></li>
+								<li><a href="http://dev.opera.com/">Dev.Opera ⬆</a></li>
 							</ul>
 						</div><!-- /.nav-collapse -->
 					</div><!-- /.container-fluid -->
