--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,13 +2,13 @@
 				<nav id="sidebar" class="span4 well well-small">
 					<ul class="nav nav-list">
 						<h2 class="nav-header">Tutorials</h2>
-						<li><a href="tut_getting_started.html">Getting Started</a></li>
-						<li><a href="tut_architecture_overview.html">Architecture Overview</a></li>
+						<li><a href="tut_getting_started.html">Getting started</a></li>
+						<li><a href="tut_architecture_overview.html">Architecture overview</a></li>
 						<li><a href="tut_basics.html">The basics of making an extension</a></li>
 						<li><a href="tut_manifest_explanation.html">Manifest explanation</a></li>
 						<li><a href="tut_browser_actions.html">Display buttons, popups and badges</a></li>
-						<li><a href="tut_message_passing.html">Passing Messages in extensions</a></li>
-						<li><a href="tut_tab_window.html">Working with Tabs and Windows</a></li>
+						<li><a href="tut_message_passing.html">Passing messages in extensions</a></li>
+						<li><a href="tut_tab_window.html">Working with tabs and windows</a></li>
 						<li><a href="tut_context_menus.html">Working with the context menu</a></li>
 						<li><a href="tut_internationalization.html">Internationalization</a></li>
 						<li><a href="tut_speeddial.html">Speed Dial extensions</a></li>
