--- a/_includes/h1.html
+++ b/_includes/h1.html
@@ -1,7 +1,7 @@
 					<h1>{{ page.title }}</h1>
 					{% assign author = site.authors[page.author] %}
 					{% if page.author %} 
-						<p class="well well-small"><img src="img/{{ author.icon }}" width="20"> by <a href="https://github.com/{{ author.github }}/">{{ author.display_name }}</a>
+						<p><img src="img/{{ author.icon }}" width="20"> by <a href="https://github.com/{{ author.github }}/">{{ author.display_name }}</a>
 					{% endif %}
 					{% if page.hattip %} 
 						({{ page.hattip }})
