--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
 						<li><a href="tut_speeddial.html">Speed Dial extensions</a></li>
 						<li><a href="tut_testing.html">Testing and debugging your extensions</a></li>
 						<li><a href="tut_icons.html">Icons</a></li>
-						<li><a href="tut_oex2nex.html">OEX2CRX conversion</a></li>
+						<li><a href="tut_conversion.html">Converting extensions</a></li>
 						<li><a href="tut_publishing_new_version.html">Publishing a new version</a></li>
 						<li><a href="tut_publishing_guidelines.html">Publishing guidelines</a></li>
 						<h2 class="nav-header">API Docs</h2>
