--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,38 +1,47 @@
 				</div><!-- .span8 -->
 				<nav id="sidebar" class="span4 well well-small">
 					<ul class="nav nav-list">
-						<h2 class="nav-header">Tutorials</h2>
-						<li><a href="tut_getting_started.html">Getting started</a></li>
-						<li><a href="tut_architecture_overview.html">Architecture overview</a></li>
-						<li><a href="tut_basics.html">The basics of making an extension</a></li>
-						<li><a href="tut_browser_actions.html">Display buttons, popups and badges</a></li>
-						<li><a href="tut_message_passing.html">Passing messages in extensions</a></li>
-						<li><a href="tut_tab_window.html">Working with tabs and windows</a></li>
-						<li><a href="tut_context_menus.html">Working with the context menu</a></li>
-						<li><a href="tut_speeddial.html">Speed Dial extensions</a></li>
-						<li><a href="tut_testing.html">Testing and debugging your extensions</a></li>
-						<li><a href="tut_icons.html">Icons</a></li>
-						<li><a href="tut_conversion.html">Converting extensions</a></li>
-						<li><a href="tut_publishing_new_version.html">Publishing a new version</a></li>
-						<li><a href="tut_publishing_guidelines.html">Publishing guidelines</a></li>
-						<h2 class="nav-header">API Docs</h2>
-						<li><a href="manifest.html">Formats: Manifest Files</a></li>
-						<li><a href="alarms.html">chrome.alarms</a></li>
-						<li><a href="pageAction.html">chrome.pageAction</a></li>
-						<li><a href="browserAction.html">chrome.browserAction</a></li>
-						<li><a href="contextMenus.html">chrome.contextMenus</a></li>
-						<li><a href="declarativeWebRequest.html">chrome.declarativeWebRequest</a></li>
-						<li><a href="events.html">chrome.events</a></li>
-						<li><a href="extension.html">chrome.extension</a></li>
-						<li><a href="i18n.html">chrome.i18n</a></li>
-						<li><a href="idle.html">chrome.idle</a></li>
-						<li><a href="management.html">chrome.management</a></li>
-						<li><a href="permissions.html">chrome.permissions</a></li>
-						<li><a href="runtime.html">chrome.runtime</a></li>
-						<li><a href="storage.html">chrome.storage</a></li>
-						<li><a href="tabs.html">chrome.tabs</a></li>
-						<li><a href="webRequest.html">chrome.webRequest</a></li>
-						<li><a href="windows.html">chrome.windows</a></li>
+						<li>
+							<h2 class="nav-header">Tutorials</h2>
+							<ul class="nav nav-list">
+								<li><a href="tut_getting_started.html">Getting started</a></li>
+								<li><a href="tut_architecture_overview.html">Architecture overview</a></li>
+								<li><a href="tut_basics.html">The basics of making an extension</a></li>
+								<li><a href="tut_browser_actions.html">Display buttons, popups and badges</a></li>
+								<li><a href="tut_message_passing.html">Passing messages in extensions</a></li>
+								<li><a href="tut_tab_window.html">Working with tabs and windows</a></li>
+								<li><a href="tut_context_menus.html">Working with the context menu</a></li>
+								<li><a href="tut_speeddial.html">Speed Dial extensions</a></li>
+								<li><a href="tut_testing.html">Testing and debugging your extensions</a></li>
+								<li><a href="tut_icons.html">Icons</a></li>
+								<li><a href="tut_match_patterns.html">Match patterns</a></li>
+								<li><a href="tut_conversion.html">Converting extensions</a></li>
+								<li><a href="tut_publishing_new_version.html">Publishing a new version</a></li>
+								<li><a href="tut_publishing_guidelines.html">Publishing guidelines</a></li>
+							</ul>
+						</li>
+						<li>
+							<h2 class="nav-header">API Docs</h2>
+							<ul class="nav nav-list">
+								<li><a href="manifest.html">Formats: Manifest Files</a></li>
+								<li><a href="alarms.html">chrome.alarms</a></li>
+								<li><a href="pageAction.html">chrome.pageAction</a></li>
+								<li><a href="browserAction.html">chrome.browserAction</a></li>
+								<li><a href="contextMenus.html">chrome.contextMenus</a></li>
+								<li><a href="declarativeWebRequest.html">chrome.declarativeWebRequest</a></li>
+								<li><a href="events.html">chrome.events</a></li>
+								<li><a href="extension.html">chrome.extension</a></li>
+								<li><a href="i18n.html">chrome.i18n</a></li>
+								<li><a href="idle.html">chrome.idle</a></li>
+								<li><a href="management.html">chrome.management</a></li>
+								<li><a href="permissions.html">chrome.permissions</a></li>
+								<li><a href="runtime.html">chrome.runtime</a></li>
+								<li><a href="storage.html">chrome.storage</a></li>
+								<li><a href="tabs.html">chrome.tabs</a></li>
+								<li><a href="webRequest.html">chrome.webRequest</a></li>
+								<li><a href="windows.html">chrome.windows</a></li>
+							</ul>
+						</li>
 					</ul>
 				</nav>
 			</div><!-- .row-fluid -->
