--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,11 +10,12 @@
 								<li><a href="tut_browser_actions.html">Display buttons, popups and badges</a></li>
 								<li><a href="tut_message_passing.html">Passing messages in extensions</a></li>
 								<li><a href="tut_tab_window.html">Working with tabs and windows</a></li>
+								<li><a href="tut_content_scripts.html">Content scripts</a></li>
+								<li><a href="tut_match_patterns.html">Match patterns</a></li>
 								<li><a href="tut_context_menus.html">Working with the context menu</a></li>
 								<li><a href="tut_speeddial.html">Speed Dial extensions</a></li>
 								<li><a href="tut_testing.html">Testing and debugging your extensions</a></li>
 								<li><a href="tut_icons.html">Icons</a></li>
-								<li><a href="tut_match_patterns.html">Match patterns</a></li>
 								<li><a href="tut_conversion.html">Converting extensions</a></li>
 								<li><a href="tut_publishing_new_version.html">Publishing a new version</a></li>
 								<li><a href="tut_publishing_guidelines.html">Publishing guidelines</a></li>
