--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
 								<li><a href="tut_getting_started.html">Getting started</a></li>
 								<li><a href="tut_architecture_overview.html">Architecture overview</a></li>
 								<li><a href="tut_basics.html">The basics of making an extension</a></li>
-								<li><a href="tut_browser_actions.html">Display buttons, popups and badges</a></li>
+								<li><a href="tut_browser_actions.html">Buttons, popups and badges (browser actions)</a></li>
 								<li><a href="tut_message_passing.html">Passing messages in extensions</a></li>
 								<li><a href="tut_tab_window.html">Working with tabs and windows</a></li>
 								<li><a href="tut_content_scripts.html">Content scripts</a></li>
