--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-		<link href='css/custom.css' rel='stylesheet' type='text/css'>
-		<link href="css/bootstrap-responsive.css" rel="stylesheet">
+		<link href="css/custom.css" rel="stylesheet" media="screen">
+		<link href="css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
 	</head>
 	<body>
 		<div id="wrap">
