--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,7 +13,7 @@
 								<li><a href="tut_content_scripts.html">Content scripts</a></li>
 								<li><a href="tut_match_patterns.html">Match patterns</a></li>
 								<li><a href="tut_context_menus.html">Working with the context menu</a></li>
-								<li><a href="tut_speeddial.html">Speed Dial extensions</a></li>
+								<li><a href="tut_sd_extensions.html">Speed Dial extensions</a></li>
 								<li><a href="tut_testing.html">Testing and debugging your extensions</a></li>
 								<li><a href="tut_icons.html">Icons</a></li>
 								<li><a href="tut_conversion.html">Converting extensions</a></li>
@@ -41,6 +41,7 @@
 								<li><a href="tabs.html">chrome.tabs</a></li>
 								<li><a href="webRequest.html">chrome.webRequest</a></li>
 								<li><a href="windows.html">chrome.windows</a></li>
+								<li><a href="speeddial.html">opr.speeddial</a></li>
 							</ul>
 						</li>
 					</ul>
