--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,8 +16,8 @@
 								<li><a href="tut_sd_extensions.html">Speed Dial extensions</a></li>
 								<li><a href="tut_testing.html">Testing and debugging your extensions</a></li>
 								<li><a href="tut_icons.html">Icons</a></li>
-								<li><a href="tut_conversion.html">Converting extensions</a></li>
-								<li><a href="tut_publishing_new_version.html">Publishing a new version</a></li>
+								<!--<li><a href="tut_conversion.html">Converting extensions</a></li>
+								<li><a href="tut_publishing_new_version.html">Publishing a new version</a></li>-->
 								<li><a href="tut_publishing_guidelines.html">Publishing guidelines</a></li>
 							</ul>
 						</li>
