Fixes to the API support info we have.
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,7 +29,7 @@
 								<li><a href="pageAction.html">chrome.pageAction</a></li>
 								<li><a href="browserAction.html">chrome.browserAction</a></li>
 								<li><a href="contextMenus.html">chrome.contextMenus</a></li>
-								<li><a href="declarativeWebRequest.html">chrome.declarativeWebRequest</a></li>
+								<!-- <li><a href="declarativeWebRequest.html">chrome.declarativeWebRequest</a></li> -->
 								<li><a href="events.html">chrome.events</a></li>
 								<li><a href="extension.html">chrome.extension</a></li>
 								<li><a href="i18n.html">chrome.i18n</a></li>
