added search functionality

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,6 +2,21 @@
 				<nav id="sidebar" class="span4 well well-small">
 					<ul class="nav nav-list">
 						<li>
+							<div id="searchbox">
+								<script>
+							  (function() {
+							    var cx = '017162326639705525688:bwfv_ipthzs';
+							    var gcse = document.createElement('script');
+							    gcse.type = 'text/javascript';
+							    gcse.async = true;
+							    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+							        '//www.google.com/cse/cse.js?cx=' + cx;
+							    var s = document.getElementsByTagName('script')[0];
+							    s.parentNode.insertBefore(gcse, s);
+							  })();
+								</script>
+								<gcse:search></gcse:search>
+							</div>
 							<h2 class="nav-header">Tutorials</h2>
 							<ul class="nav nav-list">
 								<li><a href="tut_getting_started.html">Getting started</a></li>
