replaced local bootstrap and jquery with CDN links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,8 @@
 		<title>{{ page.title }} - New Opera extensions documentation</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
 		<link href="css/custom.css" rel="stylesheet" media="screen">
-		<link href="css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
 	</head>
 	<body>
 		<div id="wrap">
