--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,8 +9,8 @@
 			<p>Portions of this page are reproduced from work created and <a href="http://code.google.com/policies.html">shared by Google</a> and used according to terms described in the <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons 3.0 Attribution License</a>. (<a href="{{ page.originalsource }}">original source</a>)</p>
 			{% endif %}
 		</footer>
-		<script src="js/jquery-1.9.1.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+		<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 		<script src="js/prettify/run_prettify.js"></script>
 		<script>
 		 $(function(){
