small fix to header arrow

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
 						<div class="nav-collapse collapse">
 							<ul class="nav">
 								<li><a href="contact.html">Contact</a></li>
-								<li><a href="http://dev.opera.com/">Dev.Opera ⬆</a></li>
+								<li><a href="http://dev.opera.com/">&uarr; Dev.Opera</a></li>
 							</ul>
 						</div><!-- /.nav-collapse -->
 					</div><!-- /.container-fluid -->
