--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,12 +5,13 @@
 		<title>{{ page.title }} - New Opera extensions documentation</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+		<link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/cosmo/bootstrap.min.css" rel="stylesheet">
+		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap-responsive.min.css" rel="stylesheet">
 		<link href="css/custom.css" rel="stylesheet" media="screen">
 	</head>
 	<body>
 		<div id="wrap">
-			<nav id="navbar" class="navbar navbar-inverse navbar-fixed-top">
+			<nav id="navbar" class="navbar navbar-fixed-top">
 				<div class="navbar-inner">
 					<div class="container-fluid">
 						<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -24,6 +25,9 @@
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="http://dev.opera.com/">&uarr; Dev.Opera</a></li>
 							</ul>
+							<form class="navbar-search pull-right" action="search.html">
+							  <input name="q" type="text" class="search-query span3" placeholder="Search extension docs">
+							</form>
 						</div><!-- /.nav-collapse -->
 					</div><!-- /.container-fluid -->
 				</div><!-- /.navbar-inner -->
