addition of integrated search function

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,5 +21,19 @@
 				});
 			// see http://docs.jquery.com/Tutorials:Auto-Selecting_Navigation and Ola's fix
 		</script>
+
+		<script>
+		  (function() {
+		    var cx = '017162326639705525688:re0yffa7zqy';
+		    var gcse = document.createElement('script');
+		    gcse.type = 'text/javascript';
+		    gcse.async = true;
+		    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+		        '//www.google.com/cse/cse.js?cx=' + cx;
+		    var s = document.getElementsByTagName('script')[0];
+		    s.parentNode.insertBefore(gcse, s);
+		  })();
+		</script>
+
 	</body>
 </html>	
