--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,21 +2,6 @@
 				<nav id="sidebar" class="span4 well well-small">
 					<ul class="nav nav-list">
 						<li>
-							<div id="searchbox">
-								<script>
-							  (function() {
-							    var cx = '017162326639705525688:bwfv_ipthzs';
-							    var gcse = document.createElement('script');
-							    gcse.type = 'text/javascript';
-							    gcse.async = true;
-							    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-							        '//www.google.com/cse/cse.js?cx=' + cx;
-							    var s = document.getElementsByTagName('script')[0];
-							    s.parentNode.insertBefore(gcse, s);
-							  })();
-								</script>
-								<gcse:search></gcse:search>
-							</div>
 							<h2 class="nav-header">Tutorials</h2>
 							<ul class="nav nav-list">
 								<li><a href="tut_getting_started.html">Getting started</a></li>
@@ -30,9 +15,9 @@
 								<li><a href="tut_context_menus.html">Working with the context menu</a></li>
 								<li><a href="tut_sd_extensions.html">Speed Dial extensions</a></li>
 								<li><a href="tut_testing.html">Testing and debugging your extensions</a></li>
+								<li><a href="tut_conversion.html">Converting OEX extensions to CRX/NEX</a></li>
 								<li><a href="tut_icons.html">Icons</a></li>
-								<!--<li><a href="tut_conversion.html">Converting extensions</a></li>
-								<li><a href="tut_publishing_new_version.html">Publishing a new version</a></li>-->
+								<!--<li><a href="tut_publishing_new_version.html">Publishing a new version</a></li>-->
 								<li><a href="tut_publishing_guidelines.html">Publishing guidelines</a></li>
 							</ul>
 						</li>
